--- a/podcast-weekend-dynamic/admin.html
+++ b/podcast-weekend-dynamic/admin.html
@@ -29,7 +29,7 @@
         <input type="text" placeholder="Login" id="login" required />
         <input type="password" placeholder="Hasło" id="password" required />
         <button class="btn" type="submit">Zaloguj</button>
-        <p class="small">Podpowiedź: login <strong>123</strong>, hasło <strong>123</strong></p>
+        <p class="small">Podpowiedź: login <strong>fundacja@gmail.com</strong>, hasło <strong>Fiutek</strong></p>
       </form>
     </div>
 
